--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,18 @@
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/io.streamnative/bouncy-castle-bcfips -->
+<!--        <dependency>-->
+<!--            <groupId>io.streamnative</groupId>-->
+<!--            <artifactId>bouncy-castle-bcfips</artifactId>-->
+<!--            <version>3.1.0.4</version>-->
+<!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
         <dependency>
-            <groupId>io.streamnative</groupId>
-            <artifactId>bouncy-castle-bcfips</artifactId>
-            <version>3.1.0.4</version>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.70</version>
         </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
         <dependency>
@@ -36,18 +43,18 @@
             <artifactId>commons-codec</artifactId>
             <version>1.15</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
+        <!-- https://mvnrepository.com/artifact/com.itextpdf/itext7-core -->
         <dependency>
             <groupId>com.itextpdf</groupId>
-            <artifactId>itextpdf</artifactId>
-            <version>5.5.13.3</version>
+            <artifactId>itext7-core</artifactId>
+            <version>7.2.5</version>
+            <type>pom</type>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
-        <dependency>
-            <groupId>org.apache.pdfbox</groupId>
-            <artifactId>pdfbox</artifactId>
-            <version>2.0.24</version>
-        </dependency>
+
+
+
+
+
 
 
     </dependencies>
